--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Johannes' Tech Blog
+name: A developer's notes
 meta_description: "A blog focused on technology, software development and consulting."
 
 markdown: redcarpet
