--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: A developer's notes
 meta_description: "A blog focused on technology, software development and consulting."
+meta_author: "Johannes Staffans"
 
 markdown: redcarpet
 highlighter: pygments
