Try out redirects

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+gems:
+  - jekyll-redirect-from
+
 name: A developer's notes
 meta_description: "A blog focused on technology, software development and consulting."
 meta_author: "Johannes Staffans"
