--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,15 @@ name: "Johannes Staffans’ Blog"
 meta_description: "A blog focused on technology, software development and consulting."
 meta_author: "Johannes Staffans"
 
-markdown: redcarpet
-highlighter: pygments
+markdown: kramdown
 logo: false
 paginate: 15
 baseurl: /
 domain_name: 'https://jstaffans.github.io'
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 
 # Details for the RSS feed generator
 url:            'https://jstaffans.github.io'
